fix layout break in section second

--- a/frontend/scss/_base.scss
+++ b/frontend/scss/_base.scss
@@ -30,6 +30,10 @@ html {
     font-size: 10px;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .container {
     max-width: 144rem;
     width: 80%;
